Add linkedin icon option

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 {% assign twitter = 'JohnDoe' %}
 {% assign snapchat = 'JohnDoe' %}
 {% assign instagram = 'JohnDoe' %}
+{% assign linkedin = 'JohnDoe' %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -62,6 +63,11 @@ a:active { color:inherit; }
           {% if snapchat %}
           <a href="hhttps://snapchat.com/{{snapchat}}">
             <i class="fa grow fa-snapchat fa-3x fa-fw"></i>
+          </a>
+          {% endif %}
+          {% if linkedin %}
+          <a href="hhttps://linkedin.com/{{linkedin}}">
+            <i class="fa grow fa-linkedin fa-3x fa-fw"></i>
           </a>
           {% endif %}
         </div>
