Make links open in new tab

--- a/index.html
+++ b/index.html
@@ -46,27 +46,27 @@ a:active { color:inherit; }
         <h1>{{ name }}</h1>
         <div class="vertical-center" style="height:5em;">
           {% if facebook %}
-          <a href="https://facebook.com/{{facebook}}">
+          <a href="https://facebook.com/{{facebook}}" target="_blank">
             <i class="fa grow fa-facebook fa-3x fa-fw"></i>
           </a>
           {% endif %}
           {% if twitter %}
-          <a href="https://twitter.com/{{twitter}}">
+          <a href="https://twitter.com/{{twitter}}" target="_blank">
             <i class="fa grow fa-twitter fa-3x fa-fw"></i>
           </a>
           {% endif %}
           {% if instagram %}
-          <a href="hhttps://instagram.com/{{instagram}}">
+          <a href="hhttps://instagram.com/{{instagram}}" target="_blank">
             <i class="fa grow fa-instagram fa-3x fa-fw"></i>
           </a>
           {% endif %}
           {% if snapchat %}
-          <a href="hhttps://snapchat.com/{{snapchat}}">
+          <a href="hhttps://snapchat.com/{{snapchat}}" target="_blank">
             <i class="fa grow fa-snapchat fa-3x fa-fw"></i>
           </a>
           {% endif %}
           {% if linkedin %}
-          <a href="hhttps://linkedin.com/{{linkedin}}">
+          <a href="hhttps://linkedin.com/{{linkedin}}" target="_blank">
             <i class="fa grow fa-linkedin fa-3x fa-fw"></i>
           </a>
           {% endif %}
@@ -76,6 +76,5 @@ a:active { color:inherit; }
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-
   </body>
 </html>
