Fix: hhttps -> https

--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@ a:active { color:inherit; }
           </a>
           {% endif %}
           {% if instagram %}
-          <a href="hhttps://instagram.com/{{instagram}}" target="_blank">
+          <a href="https://instagram.com/{{instagram}}" target="_blank">
             <i class="fa grow fa-instagram fa-3x fa-fw"></i>
           </a>
           {% endif %}
           {% if snapchat %}
-          <a href="hhttps://snapchat.com/{{snapchat}}" target="_blank">
+          <a href="https://snapchat.com/{{snapchat}}" target="_blank">
             <i class="fa grow fa-snapchat fa-3x fa-fw"></i>
           </a>
           {% endif %}
           {% if linkedin %}
-          <a href="hhttps://linkedin.com/{{linkedin}}" target="_blank">
+          <a href="https://linkedin.com/{{linkedin}}" target="_blank">
             <i class="fa grow fa-linkedin fa-3x fa-fw"></i>
           </a>
           {% endif %}
