Layout fixes - wrap icons

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     <style type="text/css" media="all">
 .vertical-center {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   text-align: center;
+  width: 100%;
 }
 .full-height {
   min-height: 100%;
@@ -30,9 +32,11 @@
 }
 .grow {
   transition: 0.3s ease-out;
+  line-height: 1.3em;
 }
 .grow:hover{
   font-size:4em;
+  line-height: 1em;
 }
 a { color:inherit; }
 a:hover { color:inherit; }
