--- a/index.html
+++ b/index.html
@@ -44,62 +44,62 @@ a:active { color:inherit; }
         {% for user in site.data.profiles %}
         <h1>{{ user.name }}</h1>
         <div class="vertical-center" style="height:5em;">
-          {% if facebook %}
+          {% if user.facebook %}
           <a href="https://facebook.com/{{user.facebook}}" target="_blank">
             <i class="fa grow fa-facebook fa-3x fa-fw"></i>
           </a>
           {% endif %}
-          {% if twitter %}
+          {% if user.twitter %}
           <a href="https://twitter.com/{{user.twitter}}" target="_blank">
             <i class="fa grow fa-twitter fa-3x fa-fw"></i>
           </a>
           {% endif %}
-          {% if instagram %}
+          {% if user.instagram %}
           <a href="https://instagram.com/{{user.instagram}}" target="_blank">
             <i class="fa grow fa-instagram fa-3x fa-fw"></i>
           </a>
           {% endif %}
-          {% if snapchat %}
+          {% if user.snapchat %}
           <a href="https://snapchat.com/{{user.snapchat}}" target="_blank">
             <i class="fa grow fa-snapchat fa-3x fa-fw"></i>
           </a>
           {% endif %}
-          {% if linkedin %}
+          {% if user.linkedin %}
           <a href="https://linkedin.com/{{user.linkedin}}" target="_blank">
             <i class="fa grow fa-linkedin fa-3x fa-fw"></i>
           </a>
           {% endif %}
-          {% if medium %}
+          {% if user.medium %}
           <a href="https://medium.com/@{{user.medium}}" target="_blank">
             <i class="fa grow fa-medium fa-3x fa-fw"></i>
           </a>
           {% endif %}
-          {% if github %}
+          {% if user.github %}
           <a href="https://github.com/{{user.github}}" target="_blank">
             <i class="fa grow fa-github fa-3x fa-fw"></i>
           </a>
           {% endif %}
-          {% if gitlab %}
+          {% if user.gitlab %}
           <a href="https://gitlab.com/{{user.gitlab}}" target="_blank">
             <i class="fa grow fa-gitlab fa-3x fa-fw"></i>
           </a>
           {% endif %}
-          {% if google-plus %}
+          {% if user.google-plus %}
           <a href="https://plus.google.com/{{user.google-plus}}" target="_blank">
             <i class="fa grow fa-google-plus-official fa-3x fa-fw"></i>
           </a>
           {% endif %}
-          {% if pinterest %}
+          {% if user.pinterest %}
           <a href="https://pinterest.com/{{user.pinterest}}" target="_blank">
             <i class="fa grow fa-pinterest fa-3x fa-fw"></i>
           </a>
           {% endif %}
-          {% if reddit %}
+          {% if user.reddit %}
           <a href="https://reddit.com/u/{{user.reddit}}" target="_blank">
             <i class="fa grow fa-reddit fa-3x fa-fw"></i>
           </a>
           {% endif %}
-          {% if spotify %}
+          {% if user.spotify %}
           <a href="https://open.spotify.com/user/{{user.spotify}}" target="_blank">
             <i class="fa grow fa-spotify fa-3x fa-fw"></i>
           </a>
