Fix: snapchat url

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ a:active { color:inherit; }
           </a>
           {% endif %}
           {% if user.snapchat %}
-          <a href="https://snapchat.com/{{user.snapchat}}" target="_blank">
+          <a href="https://snapchat.com/add/{{user.snapchat}}" target="_blank">
             <i class="fa grow fa-snapchat fa-3x fa-fw"></i>
           </a>
           {% endif %}
