--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ a:active { color:inherit; }
           </a>
           {% endif %}
           {% if user.linkedin %}
-          <a href="https://linkedin.com/{{user.linkedin}}" target="_blank">
+          <a href="https://linkedin.com/in/{{user.linkedin}}" target="_blank">
             <i class="fa grow fa-linkedin fa-3x fa-fw"></i>
           </a>
           {% endif %}
